server register modification

--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -2,6 +2,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: greenyellow;
+}
+
+.main-loggedIn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: green;
 }
 
 .main-header > nav {
