--- a/public/css/base/layout.css
+++ b/public/css/base/layout.css
@@ -14,6 +14,10 @@ body {
     padding: 10px 0;
 }
 
+.borderContainer {
+    border: 1px solid black;
+}
+
 @media (min-width: 700px) {
     .container {
         grid-template-columns: 1fr 500px 1fr;
