--- a/public/css/components/form.css
+++ b/public/css/components/form.css
@@ -2,3 +2,46 @@
     display: flex;
     flex-direction: column;
 }
+
+.form input {
+    border-color: greenyellow;
+}
+
+.registerButton {
+    border-radius: 6px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.registerButton span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .registerButton span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 2;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .registerButton:hover span {
+    padding-right: 25px;
+  }
+
+  .registerButton:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
