--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: greenyellow;
+    border-radius: 6px;
 }
 
 .main-loggedIn {
