--- a/public/css/components/form.css
+++ b/public/css/components/form.css
@@ -2,9 +2,16 @@
     display: flex;
     flex-direction: column;
 }
+.form > .notifications {
+  display: none;
+  padding: 10px 20px;
+  border: 2px solid #f00;
+  background-color: #f003;
+  color: #333;
+}
 
-.form input {
-    border-color: greenyellow;
+.form > .notifications.show {
+  display: block;
 }
 
 .registerButton {
